Commit for Get Invites

--- a/event.html
+++ b/event.html
@@ -61,7 +61,7 @@
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                         <li class="nav-item"><a class="nav-link link"
                                                 style="border: #1098F7 solid 2.5px;padding: 10px;background-color:#1098F7;color: white;border-radius: 22px;"
-                                                href="https://synapse-pass-registration.firebaseapp.com/"
+                                                href="https://synapse-invite-registration.firebaseapp.com/"
                                                 target="_blank">GET
                             INVITES</a></li>
                     </ul>
@@ -1594,7 +1594,7 @@
                         </ul>
                         <h3 class="heading2">CONTACT</h3>
                         <p class="lead min_padding">
-                            Divyanshu : 97140472529<br>
+                            Divyanshu : 9714047529<br>
                         </p>
                     </div>
                     <div class="container">
@@ -1787,7 +1787,7 @@
                             way. An event for photography and videography enthusiasts. An eye for detail and
                             creativity
                             is all that is required to participate in these chain of events.<br>
-                            Please send in your submissions to surge2k16@gmail.com
+                            Please send in your submissions to <b>surge2k17@gmail.com</b>
                         </p>
                         <h2 class="heading padding">SNAPSHOT</h2>
                         <hr class="under_head">
@@ -1795,9 +1795,9 @@
                             mind
                             like a lens. This is about those pictures that speak more than a thousand words.
                             <br>
-                            Deadline: February 22, 2017
+                            Deadline: February 21, 2017
                             <br>
-                            Theme: Dreams, Carnival, Night lights, Monochrome
+                            Theme: Shadow, Street portrait, Panorama, Best Travel Experience, Best Selfie
                             <br>
                         </p>
                         <h3 class="heading2">RULES</h3>
