--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                             id="exCollapsingNavbar">
                             <li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li>
                             <li class="nav-item"><a class="nav-link link" href="event.html">EVENTS</a></li>
-                            <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
-                            <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li> -->
+                            <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
                             <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
                             <li class="nav-item"><a class="nav-link link"
                                                     style="border: #1098F7 solid 2.5px;padding: 10px;background-color:#1098F7;color: white;border-radius: 22px;"
@@ -171,10 +170,10 @@
             <div class="col-lg-8 info-1" id="t1">
                 <div class="head-info">
                     <div class="info-heading">
-                        <h2>PRONITES</h2>
+                        <h2></h2><br>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-9" style="margin-top: 100px;">
                             <p class="info-content"></p>
                             <h2 class="info-subheading">CYNOSURE</h2>
                             <p class="info-content2">Watch some of the best performers of the country set the
@@ -192,10 +191,10 @@
             <div class="col-lg-4 col-sm-12 info-2" id="t2">
                 <div class="head-info">
                     <div class="info-heading2">
-                        <h2>PRONITES</h2>
+                        <h2></h2><br>
                     </div>
                     <p class="info-content"></p>
-                    <h2 class="info-subheading">INAGURAL</h2>
+                    <h2 class="info-subheading" style="margin-top: 100px;">INAGURAL</h2>
                     <p class="info-content2">Double up laughing
                         along with Biswa Kalyan Rath, The Viral Fever, East India Comedy and Revadio.</p>
                 </div>
@@ -212,10 +211,10 @@
             <div class="col-md-4 info-2" id="t3">
                 <div class="head-info">
                     <div class="info-heading2">
-                        <h2>PRONITES</h2>
+                        <h2></h2><br>
                     </div>
                     <p class="info-content"></p>
-                    <h2 class="info-subheading">EDM NIGHT</h2>
+                    <h2 class="info-subheading" style="margin-top: 80px;">EDM NIGHT</h2>
                     <p class="info-content2">Celebrate the non-stop mixes of Sunburn and VH1 Supersonic.The best DJs in
                         the
                         country are in the house to transcend
@@ -229,10 +228,10 @@
             <div class="col-md-4 info-2" id="t4">
                 <div class="head-info">
                     <div class="info-heading2">
-                        <h2>PRONITES</h2>
+                        <h2></h2><br>
                     </div>
                     <p class="info-content"></p>
-                    <h2 class="info-subheading">RAGNA ROCK</h2>
+                    <h2 class="info-subheading" style="margin-top: 80px;">RAGNA ROCK</h2>
                     <p class="info-content2">Unbelievable guitar solos,thundering bass takes the
                         night by storm as the crowd transforms into a sea of head bangers.</p>
                 </div>
@@ -244,10 +243,10 @@
             <div class="col-md-4 info-2" id="t5">
                 <div class="head-info">
                     <div class="info-heading2">
-                        <h2>PRONITES</h2>
+                        <h2></h2><br>
                     </div>
                     <p class="info-content"></p>
-                    <h2 class="info-subheading">RAGNA ROCK</h2>
+                    <h2 class="info-subheading" style="margin-top: 80px;">RAGNA ROCK</h2>
                     <p class="info-content2">Witness the best of the best; Inner Sanctum, Providence, Demonic
                         Resurrection,
                         Bhayanak Maut, Undying Inc. and more.</p>
@@ -542,16 +541,17 @@
     <div class="footer1" style="text-align: left;margin-bottom: 0px;">
         <div class="container-fluid" style="margin-left: -25px;">
             <div class="row">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-7 col-md-12">
                     <a class="footer-link" href="Campus_Ambassador.html">CAMPUS AMBASSADOR</a>
                     <a class="footer-link"
                        href="https://drive.google.com/file/d/0B0dt8eWTvob6UlNuS3FwT2VsR28/view">TRAILER</a>
                     <a class="footer-link"
                        href="https://drive.google.com/open?id=0B0dt8eWTvob6SmY1am9NeDJCSzQ">BROCHURE</a>
                     <a class="footer-link" href="youth_run.html">YOUTH RUN</a>
+                    <a class="footer-link" href="contact_us.html">CONTACT US</a>
                     <a class="footer-link" href="gallery.html">GALLERY</a>
                 </div>
-                <div class="col-lg-2 col-lg-offset-4 col-md-12">
+                <div class="col-lg-2 col-lg-offset-3 col-md-12">
                     <a href="https://www.youtube.com/user/SynapseDAIICT" target="_blank"><i
                             class="fa fa-youtube-play fa-lg footer-icon"
                             aria-hidden="true"></i></a>
@@ -566,20 +566,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-12 visible-lg">
-                    <div class="row" style="padding-top: 20px;padding-bottom: 10px;">
-                        <div class="col-lg-2">
-                            <img src="assets/images/logo.png" width="54" height="50" style="margin-left: 5px;">
-                        </div>
-                        <div class="col-lg-10" style="margin-left: -10px;padding-top: 5px;">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-offset-5 col-lg-3 col-md-12 col-md-offset-0 visible-lg">
+                <div class="col-lg-12 col-md-12 visible-lg" style="padding-top: 20px;padding-bottom: 10px;">
+                    <img class="center-block" src="assets/images/logo.png" width="54" height="50">
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 <div style="font-family: 'Roboto', sans-serif;
     color: #1f1f1f;letter-spacing: 0.7px;">
@@ -1169,7 +1162,7 @@
                             <li>There is no restriction on the song as long as the dance forms are classical, semi
                                 classical, or folk
                             </li>
-                            <li>For group performance maximum size of each group is 15 (Maximum).</li>
+                            <li>For group performance maximum size of each group is 16 (Maximum).</li>
                             <li>Depending on number of participants there may be a preliminary round of which
                                 participants will be informed in advance.
                             </li>
