--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         country are in the house to transcend
                         the crowd</p>
                 </div>
-                <a class="home-button" href="https://synapse-pass-registration.firebaseapp.com/" target="_blank">
+                <a class="home-button" href="https://synapse-invite-registration.firebaseapp.com/" target="_blank">
                     <button type="button" class="bott btn-primary btn-md center-block">GET INVITE
                     </button>
                 </a>
@@ -240,20 +240,17 @@
                     </button>
                 </a>
             </div>
-            <div class="col-md-4 info-2" id="t5">
+            <div class="col-md-4 info-2" id="t20">
                 <div class="head-info">
                     <div class="info-heading2">
-                        <h2></h2><br>
+                        <h2>ACCOMMODATION</h2>
                     </div>
                     <p class="info-content"></p>
-                    <h2 class="info-subheading" style="margin-top: 80px;">RAGNA ROCK</h2>
-                    <p class="info-content2">Witness the best of the best; Inner Sanctum, Providence, Demonic
-                        Resurrection,
-                        Bhayanak Maut, Undying Inc. and more.</p>
+                    <h2 class="info-subheading"></h2>
+                    <p class="info-content2"></p>
                 </div>
-                <a class="home-button" href="https://synapse-invite-registration.firebaseapp.com/   " target="_blank">
-                    <button type="button" class="bott btn-primary btn-md center-block">GET INVITE
-                    </button>
+                <a class="home-button" href="register.html">
+                    <button type="button" class="bott center-block" style="margin-top: 260px;">REGISTER</button>
                 </a>
             </div>
         </div>
