--- a/sponsor.html
+++ b/sponsor.html
@@ -105,10 +105,10 @@
     <h3 class="heading2">TITLE SPONSOR</h3>
     <div class="row">
         <div class="col-lg-offset-2 col-lg-4">
-            <img src="assets/images/Sponsers/Paytm_logo.png" width="300" height="100">
+            <img src="assets/images/Sponsers/4_101.png" width="300" height="210" style="margin-top: -43px;">
         </div>
         <div class="col-lg-4">
-            <img src="assets/images/Sponsers/4_101.jpg" width="300" height="210" style="margin-top: -30px;">
+            <img src="assets/images/Sponsers/Paytm_logo.png" width="300" height="100">
         </div>
     </div>
     <h3 class="heading2">ASSOCIATE SPONSOR</h3>
